--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,18 @@
 info.project.name=@project.name@
 info.project.description=@project.description@
 info.project.version=@project.version@
+
+spring.datasource.name=RugbyVitre
+spring.datasource.url=jdbc:postgresql://localhost:4581/RugbyVitre
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.username=${DATABASE_USERNAME:rugbyVitreAdmin}
+spring.datasource.password=${DATABASE_PASSWORD:27nQeWWMpcP4FkMmtGo8ehaoE8029pMJxnJ7n6679a3S693RER}
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+
+spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.type.descriptor.sql=trace
