--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>rugbyvitre</name>
 	<description>BackEnd Rugby</description>
+	<packaging>war</packaging>
 	<properties>
 		<java.version>18</java.version>
 		<mapstruct.version>1.5.2.Final</mapstruct.version>
@@ -67,6 +68,12 @@
 			<artifactId>mapstruct</artifactId>
 			<version>${mapstruct.version}</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-tomcat</artifactId>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -92,12 +99,13 @@
 						</path>
 					</annotationProcessorPaths>
 					<compilerArgs>
-						<compilerArg>MapStruct.defaultComponentModel=spring
+						<compilerArg>-Amapstruct.defaultComponentModel=spring
 						</compilerArg>
 					</compilerArgs>
 				</configuration>
 			</plugin>
 		</plugins>
+		<finalName>${artifactId}</finalName>
 	</build>
 
 </project>
