--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,6 @@ spring.datasource.username=${DATABASE_USERNAME:rugbyVitreAdmin}
 spring.datasource.password=${DATABASE_PASSWORD:27nQeWWMpcP4FkMmtGo8ehaoE8029pMJxnJ7n6679a3S693RER}
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.type.descriptor.sql=trace
